# Software_Supply_Chain_CTF

./: .gitignore  LICENSE  Pipfile  README.md  app.py
abandoned-dependencies-ctf/: Dockerfile  README.txt  main.py  misc_1.txt  misc_2.txt  requirements.txt  server.py  test.py
bitcoin-ctf/: .dockerignore  Dockerfile  README.md  app.py  donate.py  entries.db  move.py  requirements.txt
compromise-dev-account/: docker-compose.yml
compromise-dev-account-ctf/: build_images_locally.sh  docker-compose.yml
compromise-dev-workflow-ctf/: build_images_locally.sh  cdwlevel.py  docker-compose.yml
confused-dependencies-ctf/: .pypirc  Dockerfile  Dockerfile-setup  build_all.sh  client.Dockerfile  client.pypirc  docker-compose.yml  flag  private.Dockerfile  pypi.Dockerfile  run_test.sh  setup.Dockerfile  tester-compose.yml  tester.Dockerfile  tester.pypirc
confused-dependencies-ctf/test-app/mysoftlog/: README.md  setup.cfg
confused-dependencies-ctf/test-app/mysoftlog/mysoftlog/: __init__.py
confused-dependencies-ctf/test-app/userwidgetserv/: setup.cfg
confused-dependencies-ctf/test-app/userwidgetserv/userwidgetserv/: __main__.py
frozen-dependency-ctf/: Dockerfile  admin.py  app.py  build_images.sh  container_clean.sh  docker-compose.yml  index.py  requirements.txt  utils.py
internal-dependency-ctf/: .htpasswd  Dockerfile  README.md  buildAll.sh  docker-compose.yml  main.py  server.py
malicious-contributor-ctf/: Dockerfile  requirements.txt  test.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
sbom-ctf/: Dockerfile  app.py  requirements.txt
(+363 files in other folders)
