[metadata]
name = mysoftlog
version = 1.7.3
author = Michael Smith
author_email = msmith@mysoft.example.com
description = Logs to company CentralLog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.mysoft.example.com/mysoftlog
project_urls =
    Bug Tracker = https://git.mysoft.example.com/mysoftlog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

