[metadata]
name = userwidgetserv
version = 1.2.1
author = Janet Jones
author_email = jjones@mysoft.example.com
description = Server application for MySoft UserWidget software
url = https://git.mysoft.example.com/userwidgetserv
project_urls =
    Bug Tracker = https://git.mysoft.example.com/userwidgetserv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    mysoftlog
    Flask
    itsdangerous
    Jinja2
    MarkupSafe
    pendulum
    python-dateutil
    pytzdata
    six
    Werkzeug

